UAT_AllStar_8Jan2024_0636/Backup-Source/objects/Phoenix_Bid_Fee_Master__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Batch_Upload_Number__c</fullName>
        <label>Batch Upload Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Govt business</fullName>
                </value>
                <value>
                    <fullName>Non Govt business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bid Fee Masters</relationshipLabel>
        <relationshipName>Bid_Fee_Masters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Fee_Type__c</fullName>
        <label>Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CM Fee%</fullName>
                </value>
                <value>
                    <fullName>RDC/NLC %</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Fee__c</fullName>
        <label>Fee%</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phoenix_Preferred_Wholesaler__c</fullName>
        <label>Preferred Wholesaler</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABC</fullName>
                </value>
                <value>
                    <fullName>Cardinal</fullName>
                </value>
                <value>
                    <fullName>McKesson</fullName>
                </value>
                <value>
                    <fullName>Morris and Dickson</fullName>
                </value>
                <value>
                    <fullName>Source program</fullName>
                </value>
                <value>
                    <fullName>Oncology Supply</fullName>
                </value>
                <value>
                    <fullName>OptiSource Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Product_Type_for_CM_Fee__c</fullName>
        <label>Product Type for CM Fee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>Regular Product</fullName>
                </value>
                <value>
                    <fullName>REMS</fullName>
                </value>
                <value>
                    <fullName>Special Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Whlsr_Controlled_Substance_Optisou_fee__c</fullName>
        <label>Whlsr Controlled Fee% (Optisource)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Whlsr_Controlled_Substance_fee__c</fullName>
        <label>Whlsr Controlled Substance Fee%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Bid Fee Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Preferred_Wholesaler__c</columns>
        <columns>Phoenix_Customer__c</columns>
        <columns>Phoenix_Customer_Type__c</columns>
        <columns>Phoenix_Fee_Type__c</columns>
        <columns>Phoenix_Product_Type_for_CM_Fee__c</columns>
        <columns>Phoenix_Fee__c</columns>
        <columns>Whlsr_Controlled_Substance_fee__c</columns>
        <columns>Whlsr_Controlled_Substance_Optisou_fee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BF-{000000}</displayFormat>
        <label>Bid Fee Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bid Fee Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>